// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`template e2e: weapp-vite-tailwindcss-tdesign-template > renders all pages from app config > weapp-vite-tailwindcss-tdesign-template::app.wxss 1`] = `
"/*! tailwindcss v4.2.4 | MIT License | https://tailwindcss.com */
::before,
::after {
  --tw-content: '';
}
view,
text,
::before,
::after {
  --tw-duration: initial;
  --tw-font-weight: initial;
  --tw-gradient-from: transparent;
  --tw-gradient-from-position: 0%;
  --tw-gradient-position: initial;
  --tw-gradient-stops: initial;
  --tw-gradient-to: transparent;
  --tw-gradient-to-position: 100%;
  --tw-gradient-via: transparent;
  --tw-gradient-via-position: 50%;
  --tw-gradient-via-stops: initial;
  --tw-inset-ring-color: initial;
  --tw-inset-ring-shadow: 0 0 transparent;
  --tw-inset-shadow: 0 0 transparent;
  --tw-inset-shadow-alpha: 100%;
  --tw-inset-shadow-color: initial;
  --tw-leading: initial;
  --tw-outline-style: solid;
  --tw-ring-color: initial;
  --tw-ring-inset: initial;
  --tw-ring-offset-color: #fff;
  --tw-ring-offset-shadow: 0 0 transparent;
  --tw-ring-offset-width: 0;
  --tw-ring-shadow: 0 0 transparent;
  --tw-scale-x: 1;
  --tw-scale-y: 1;
  --tw-scale-z: 1;
  --tw-shadow: 0 0 transparent;
  --tw-shadow-alpha: 100%;
  --tw-shadow-color: initial;
  --tw-space-x-reverse: 0;
  --tw-space-y-reverse: 0;
  --tw-tracking: initial;
  border-color: currentColor;
  border-style: solid;
  border-width: 0;
  box-sizing: border-box;
}
page,
.tw-root,
wx-root-portal-content,
:host {
  --color-blue-600: rgb(21, 93, 252);
  --color-gray-100: rgb(243, 244, 246);
  --color-gray-900: rgb(16, 24, 40);
  --color-green-400: rgb(5, 223, 114);
  --color-sky-400: rgb(0, 187, 253);
  --color-slate-100: rgb(241, 245, 249);
  --color-slate-200: rgb(226, 232, 240);
  --color-slate-400: rgb(144, 161, 185);
  --color-slate-600: rgb(69, 85, 108);
  --color-slate-700: rgb(49, 65, 88);
  --color-slate-800: rgb(29, 41, 61);
  --color-slate-900: rgb(15, 23, 43);
  --color-violet-700: rgb(112, 8, 231);
  --color-white: #fff;
  --default-transition-duration: 150ms;
  --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  --font-weight-bold: 700;
  --font-weight-extrabold: 800;
  --font-weight-medium: 500;
  --font-weight-semibold: 600;
  --leading-relaxed: 1.625;
  --radius-2xl: 32rpx;
  --radius-3xl: 48rpx;
  --spacing: 8rpx;
  --text-2xl: 48rpx;
  --text-2xl--line-height: 1.33333;
  --text-3xl: 60rpx;
  --text-3xl--line-height: 1.2;
  --text-lg: 36rpx;
  --text-lg--line-height: 1.55556;
  --text-sm: 28rpx;
  --text-sm--line-height: 1.42857;
  --text-xl: 40rpx;
  --text-xl--line-height: 1.4;
  --text-xs: 24rpx;
  --text-xs--line-height: 1.33333;
}
@supports (color: color(display-p3 0 0 0%)) {
  page,
  .tw-root,
  wx-root-portal-content,
  :host {
    --color-sky-400: rgb(0, 187, 253);
  }

  @media (color-gamut: p3) {
    page,
    .tw-root,
    wx-root-portal-content,
    :host {
      --color-sky-400: color(display-p3 0.30598 0.72501 0.98017);
    }
  }
}
view,
text,
::after,
::before {
  border: 0 solid;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
.mx-auto {
  margin-left: auto;
  margin-right: auto;
}
.mt-3 {
  margin-top: calc(var(--spacing) * 3);
}
.mt-4 {
  margin-top: calc(var(--spacing) * 4);
}
.i-mdi-moon-waxing-crescent {
  --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='24' height='24'%3E%3Cpath fill='black' d='M12 2a9.9 9.9 0 0 0-3 .46a10 10 0 0 1 0 19.08A10 10 0 1 0 12 2'/%3E%3C/svg%3E");
  -webkit-mask-image: var(--svg);
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-size: 100% 100%;
  background-color: currentColor;
  display: inline-block;
  height: 1em;
  mask-image: var(--svg);
  mask-repeat: no-repeat;
  mask-size: 100% 100%;
  width: 1em;
}
.i-mdi-weather-sunny {
  --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='24' height='24'%3E%3Cpath fill='black' d='M12 7a5 5 0 0 1 5 5a5 5 0 0 1-5 5a5 5 0 0 1-5-5a5 5 0 0 1 5-5m0 2a3 3 0 0 0-3 3a3 3 0 0 0 3 3a3 3 0 0 0 3-3a3 3 0 0 0-3-3m0-7l2.39 3.42C13.65 5.15 12.84 5 12 5s-1.65.15-2.39.42zM3.34 7l4.16-.35A7.2 7.2 0 0 0 5.94 8.5c-.44.74-.69 1.5-.83 2.29zm.02 10l1.76-3.77a7.13 7.13 0 0 0 2.38 4.14zM20.65 7l-1.77 3.79a7.02 7.02 0 0 0-2.38-4.15zm-.01 10l-4.14.36c.59-.51 1.12-1.14 1.54-1.86c.42-.73.69-1.5.83-2.29zM12 22l-2.41-3.44c.74.27 1.55.44 2.41.44c.82 0 1.63-.17 2.37-.44z'/%3E%3C/svg%3E");
  -webkit-mask-image: var(--svg);
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-size: 100% 100%;
  background-color: currentColor;
  display: inline-block;
  height: 1em;
  mask-image: var(--svg);
  mask-repeat: no-repeat;
  mask-size: 100% 100%;
  width: 1em;
}
.block {
  display: block;
}
.flex {
  display: flex;
}
.h-24 {
  height: calc(var(--spacing) * 24);
}
.min-h-screen {
  min-height: 100vh;
}
.w-24 {
  width: calc(var(--spacing) * 24);
}
.w-32 {
  width: calc(var(--spacing) * 32);
}
.w-full {
  width: 100%;
}
.max-w-_b640rpx_B {
  max-width: 640rpx;
}
.flex-col {
  flex-direction: column;
}
.flex-wrap {
  flex-wrap: wrap;
}
.items-center {
  align-items: center;
}
.gap-4 {
  gap: calc(var(--spacing) * 4);
}
.gap-6 {
  gap: calc(var(--spacing) * 6);
}
.space-y-10 > view + view,
.space-y-10 > view + text,
.space-y-10 > text + view,
.space-y-10 > text + text {
  --tw-space-y-reverse: 0;
  margin-bottom: calc((var(--spacing) * 10) * var(--tw-space-y-reverse));
  margin-top: calc((var(--spacing) * 10) * (1 - var(--tw-space-y-reverse)));
}
.space-x-8 > view + view,
.space-x-8 > view + text,
.space-x-8 > text + view,
.space-x-8 > text + text {
  --tw-space-x-reverse: 0;
  margin-left: calc((var(--spacing) * 8) * (1 - var(--tw-space-x-reverse)));
  margin-right: calc((var(--spacing) * 8) * var(--tw-space-x-reverse));
}
.rounded-2xl {
  border-radius: var(--radius-2xl);
}
.rounded-3xl {
  border-radius: var(--radius-3xl);
}
.rounded-full {
  border-radius: 9999px;
}
.bg-gray-100 {
  background-color: var(--color-gray-100);
}
.bg-gray-900 {
  background-color: var(--color-gray-900);
}
.bg-slate-100 {
  background-color: var(--color-slate-100);
}
.bg-white {
  background-color: var(--color-white);
}
.bg-white_f95 {
  background-color: #fffffff2;
}
.bg-gradient-to-r {
  --tw-gradient-position: to right;
  background-image: linear-gradient(var(--tw-gradient-stops));
}
.bg-_burl_phttps_c_f_fvite_dicebreaker_dtop_flogo_dpng_P_B {
  background-image: url(https://vite.icebreaker.top/logo.png);
}
.bg-_burl_phttps_c_f_fvite_dicebreaker_dtop_ftw-logo_dpng_P_B {
  background-image: url(https://vite.icebreaker.top/tw-logo.png);
}
.from-green-400 {
  --tw-gradient-from: var(--color-green-400);
  --tw-gradient-stops: var(
    --tw-gradient-via-stops,
    var(--tw-gradient-position),
    var(--tw-gradient-from) var(--tw-gradient-from-position),
    var(--tw-gradient-to) var(--tw-gradient-to-position)
  );
}
.to-sky-400 {
  --tw-gradient-stops: var(
    --tw-gradient-via-stops,
    var(--tw-gradient-position),
    var(--tw-gradient-from) var(--tw-gradient-from-position),
    var(--tw-gradient-to) var(--tw-gradient-to-position)
  );
  --tw-gradient-to: var(--color-sky-400);
}
.bg-_blength_c100_v_100_v_B {
  background-size: 100% 100%;
}
.bg-clip-text {
  background-clip: text;
}
.bg-no-repeat {
  background-repeat: no-repeat;
}
.p-5 {
  padding: calc(var(--spacing) * 5);
}
.p-8 {
  padding: calc(var(--spacing) * 8);
}
.px-4 {
  padding-left: 32rpx;
  padding-right: 32rpx;
  padding-left: calc(var(--spacing) * 4);
  padding-right: calc(var(--spacing) * 4);
}
.px-5 {
  padding-left: 40rpx;
  padding-right: 40rpx;
  padding-left: calc(var(--spacing) * 5);
  padding-right: calc(var(--spacing) * 5);
}
.py-2 {
  padding-top: 16rpx;
  padding-bottom: 16rpx;
  padding-top: calc(var(--spacing) * 2);
  padding-bottom: calc(var(--spacing) * 2);
}
.py-5 {
  padding-top: 40rpx;
  padding-bottom: 40rpx;
  padding-top: calc(var(--spacing) * 5);
  padding-bottom: calc(var(--spacing) * 5);
}
.pt-20 {
  padding-top: calc(var(--spacing) * 20);
}
.text-2xl {
  font-size: var(--text-2xl);
  line-height: var(--tw-leading, var(--text-2xl--line-height));
}
.text-3xl {
  font-size: var(--text-3xl);
  line-height: var(--tw-leading, var(--text-3xl--line-height));
}
.text-lg {
  font-size: var(--text-lg);
  line-height: var(--tw-leading, var(--text-lg--line-height));
}
.text-sm {
  font-size: var(--text-sm);
  line-height: var(--tw-leading, var(--text-sm--line-height));
}
.text-xl {
  font-size: var(--text-xl);
  line-height: var(--tw-leading, var(--text-xl--line-height));
}
.text-xs {
  font-size: var(--text-xs);
  line-height: var(--tw-leading, var(--text-xs--line-height));
}
.leading-7 {
  --tw-leading: calc(var(--spacing) * 7);
  line-height: calc(var(--spacing) * 7);
}
.leading-relaxed {
  --tw-leading: var(--leading-relaxed);
  line-height: var(--leading-relaxed);
}
.font-bold {
  --tw-font-weight: var(--font-weight-bold);
  font-weight: var(--font-weight-bold);
}
.font-extrabold {
  --tw-font-weight: var(--font-weight-extrabold);
  font-weight: var(--font-weight-extrabold);
}
.font-medium {
  --tw-font-weight: var(--font-weight-medium);
  font-weight: var(--font-weight-medium);
}
.font-semibold {
  --tw-font-weight: var(--font-weight-semibold);
  font-weight: var(--font-weight-semibold);
}
.tracking-_b0_d2em_B {
  --tw-tracking: 0.2em;
  letter-spacing: 0.2em;
}
.text-blue-600 {
  color: var(--color-blue-600);
}
.text-slate-200 {
  color: var(--color-slate-200);
}
.text-slate-400 {
  color: var(--color-slate-400);
}
.text-slate-600 {
  color: var(--color-slate-600);
}
.text-slate-700 {
  color: var(--color-slate-700);
}
.text-slate-800 {
  color: var(--color-slate-800);
}
.text-slate-900 {
  color: var(--color-slate-900);
}
.text-transparent {
  color: transparent;
}
.text-violet-700 {
  color: var(--color-violet-700);
}
.text-white {
  color: var(--color-white);
}
.uppercase {
  text-transform: uppercase;
}
.underline {
  text-decoration-line: underline;
}
.shadow-sm {
  --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, #0000001a), 0 1px 2px -1px var(--tw-shadow-color, #0000001a);
  box-shadow:
    var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow),
    var(--tw-shadow);
}
.shadow-xl {
  --tw-shadow: 0 20px 25px -5px var(--tw-shadow-color, #0000001a), 0 8px 10px -6px var(--tw-shadow-color, #0000001a);
  box-shadow:
    var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow),
    var(--tw-shadow);
}
.shadow-slate-200_f70 {
  --tw-shadow-color: #e2e8f0b3;
}
.outline {
  outline-style: var(--tw-outline-style);
  outline-width: 1px;
}
.transition {
  transition-duration: var(--tw-duration, var(--default-transition-duration));
  transition-property:
    color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from,
    --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter,
    backdrop-filter, display, content-visibility, overlay, pointer-events;
  transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
}
.transition-colors {
  transition-duration: var(--tw-duration, var(--default-transition-duration));
  transition-property:
    color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from,
    --tw-gradient-via, --tw-gradient-to;
  transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
}
.duration-500 {
  --tw-duration: 500ms;
  transition-duration: 500ms;
}
.active_cscale-95:active {
  --tw-scale-x: 95%;
  --tw-scale-y: 95%;
  --tw-scale-z: 95%;
  scale: var(--tw-scale-x) var(--tw-scale-y);
}
"
`;

exports[`template e2e: weapp-vite-tailwindcss-tdesign-template > renders all pages from app config > weapp-vite-tailwindcss-tdesign-template::pages/index/index 1`] = `
"<weapp-layout-default is="layouts/default/index">
  <view class="index--layout-default">
    <view class="min-h-screen bg-gray-100 text-slate-800 transition-colors duration-500">
      <view class="flex flex-col items-center pt-20 space-y-10">
        <view class="flex HelloWorld--flex space-x-8 HelloWorld--space-x-8">
          <view
            class="w-24 HelloWorld--w-24 h-24 HelloWorld--h-24 bg-_burl_phttps_c_f_fvite_dicebreaker_dtop_flogo_dpng_P_B HelloWorld--bg-_burl_phttps_c_f_fvite_dicebreaker_dtop_flogo_dpng_P_B bg-_blength_c100_v_100_v_B HelloWorld--bg-_blength_c100_v_100_v_B bg-no-repeat HelloWorld--bg-no-repeat"></view>
          <view
            class="w-32 HelloWorld--w-32 h-24 HelloWorld--h-24 bg-_burl_phttps_c_f_fvite_dicebreaker_dtop_ftw-logo_dpng_P_B HelloWorld--bg-_burl_phttps_c_f_fvite_dicebreaker_dtop_ftw-logo_dpng_P_B bg-_blength_c100_v_100_v_B HelloWorld--bg-_blength_c100_v_100_v_B bg-no-repeat HelloWorld--bg-no-repeat"></view>
        </view>
        <view
          class="bg-gradient-to-r HelloWorld--bg-gradient-to-r from-green-400 HelloWorld--from-green-400 to-sky-400 HelloWorld--to-sky-400 bg-clip-text HelloWorld--bg-clip-text text-xl HelloWorld--text-xl font-extrabold HelloWorld--font-extrabold text-transparent HelloWorld--text-transparent underline HelloWorld--underline">
          weapp-vite &amp; weapp-tailwindcss
        </view>
        <view
          class="w-full HelloWorld--w-full max-w-_b640rpx_B HelloWorld--max-w-_b640rpx_B mx-auto HelloWorld--mx-auto rounded-3xl HelloWorld--rounded-3xl p-8 HelloWorld--p-8 bg-white_f95 HelloWorld--bg-white_f95 shadow-xl HelloWorld--shadow-xl shadow-slate-200_f70 HelloWorld--shadow-slate-200_f70 flex HelloWorld--flex flex-col HelloWorld--flex-col gap-6 HelloWorld--gap-6">
          <view
            class="text-3xl HelloWorld--text-3xl font-semibold HelloWorld--font-semibold text-blue-600 HelloWorld--text-blue-600">
            Hello weapp-vite + TDesign
          </view>
          <view
            class="text-lg HelloWorld--text-lg leading-relaxed HelloWorld--leading-relaxed text-slate-700 HelloWorld--text-slate-700">
            集成 TDesign Miniprogram 与 Tailwind CSS，帮助你快速搭建企业级交互界面。
          </view>
          <view
            class="flex HelloWorld--flex flex-wrap HelloWorld--flex-wrap gap-4 HelloWorld--gap-4">
            <button
              activity-type="0"
              entrance-path=""
              need-show-entrance=""
              app-parameter=""
              data-custom="null"
              form-type=""
              hover-class="t-button--hover"
              hover-start-time="20"
              hover-stay-time="70"
              lang=""
              open-type=""
              send-message-img="截图"
              send-message-path="当前分享路径"
              send-message-title="当前标题"
              session-from=""
              style=""
              class="px-5 HelloWorld--px-5 py-2 HelloWorld--py-2 rounded-full HelloWorld--rounded-full text-sm HelloWorld--text-sm font-medium HelloWorld--font-medium transition HelloWorld--transition active_cscale-95 HelloWorld--active_cscale-95 t-button button--t-button t-button--base button--t-button--base t-button--primary button--t-button--primary t-button--rectangle button--t-button--rectangle t-button--size-small button--t-button--size-small"
              role="button"
              aria-disabled="false">
              <view class="t-button__content button--t-button__content">复制文档链接</view>
            </button>
            <button
              activity-type="0"
              entrance-path=""
              need-show-entrance=""
              app-parameter=""
              data-custom="null"
              form-type=""
              hover-class="t-button--hover"
              hover-start-time="20"
              hover-stay-time="70"
              lang=""
              open-type=""
              send-message-img="截图"
              send-message-path="当前分享路径"
              send-message-title="当前标题"
              session-from=""
              style=""
              class="px-5 HelloWorld--px-5 py-2 HelloWorld--py-2 rounded-full HelloWorld--rounded-full text-sm HelloWorld--text-sm font-medium HelloWorld--font-medium transition HelloWorld--transition active_cscale-95 HelloWorld--active_cscale-95 t-button button--t-button t-button--outline button--t-button--outline t-button--light button--t-button--light t-button--rectangle button--t-button--rectangle t-button--size-small button--t-button--size-small"
              role="button"
              aria-disabled="false">
              <view class="t-button__content button--t-button__content">TDesign 小程序组件</view>
            </button>
          </view>
          <view class="text-xs HelloWorld--text-xs text-slate-400 HelloWorld--text-slate-400">
            点击按钮即可复制常用链接
          </view>
        </view>
        <view class="flex items-center">
          当前模式 light 切换模式
          <view class="i-mdi-moon-waxing-crescent text-2xl"></view>
        </view>
        <view class="underline">https://vite.icebreaker.top</view>
        <view class="underline">https://tw.icebreaker.top</view>
        <view>
          <button
            activity-type="0"
            entrance-path=""
            need-show-entrance=""
            app-parameter=""
            data-custom="null"
            form-type=""
            hover-class="t-button--hover"
            hover-start-time="20"
            hover-stay-time="70"
            lang=""
            open-type=""
            send-message-img="截图"
            send-message-path="当前分享路径"
            send-message-title="当前标题"
            session-from=""
            style=""
            class="t-button button--t-button t-button--base button--t-button--base t-button--primary button--t-button--primary t-button--rectangle button--t-button--rectangle t-button--size-medium button--t-button--size-medium t-button--ghost button--t-button--ghost"
            role="button"
            aria-disabled="false">
            <view class="t-button__content button--t-button__content">TDesign Button</view>
          </button>
        </view>
        <view>
          <button
            activity-type="0"
            entrance-path=""
            need-show-entrance=""
            app-parameter=""
            data-custom="null"
            form-type=""
            hover-class="t-button--hover"
            hover-start-time="20"
            hover-stay-time="70"
            lang=""
            open-type=""
            send-message-img="截图"
            send-message-path="当前分享路径"
            send-message-title="当前标题"
            session-from=""
            style=""
            class="t-button button--t-button t-button--outline button--t-button--outline t-button--success button--t-button--success t-button--rectangle button--t-button--rectangle t-button--size-medium button--t-button--size-medium"
            role="button"
            aria-disabled="false">
            <view class="t-button__content button--t-button__content">打开布局演示页</view>
          </button>
        </view>
      </view>
      <view
        class="t-action-sheet sheet--t-action-sheet t-action-sheet--center sheet--t-action-sheet--center t-action-sheet--list sheet--t-action-sheet--list t-action-sheet--no-description sheet--t-action-sheet--no-description"
        id="t-action-sheet--stable"
        style=""></view>
    </view>
  </view>
</weapp-layout-default>
"
`;

exports[`template e2e: weapp-vite-tailwindcss-tdesign-template > renders all pages from app config > weapp-vite-tailwindcss-tdesign-template::pages/layouts/index 1`] = `
"<weapp-layout-default is="layouts/default/index">
  <view class="index--layout-default">
    <view class="min-h-screen bg-slate-100 px-4 py-5">
      <view class="rounded-2xl bg-white p-5 shadow-sm">
        <view class="text-xs font-semibold uppercase tracking-_b0_d2em_B text-violet-700">
          Native Layouts
        </view>
        <view class="mt-3 text-2xl font-bold text-slate-900">TDesign 原生模板已接入 layouts</view>
        <view class="mt-3 text-sm leading-7 text-slate-600">当前状态：default</view>
      </view>
      <view class="mt-4 rounded-2xl bg-white p-5 shadow-sm">
        <button
          activity-type="0"
          entrance-path=""
          need-show-entrance=""
          app-parameter=""
          data-custom="null"
          form-type=""
          hover-class="t-button--hover"
          hover-start-time="20"
          hover-stay-time="70"
          lang=""
          open-type=""
          send-message-img="截图"
          send-message-path="当前分享路径"
          send-message-title="当前标题"
          session-from=""
          style=""
          class="t-button button--t-button t-button--base button--t-button--base t-button--primary button--t-button--primary t-button--rectangle button--t-button--rectangle t-button--size-medium button--t-button--size-medium t-button--block button--t-button--block"
          role="button"
          aria-disabled="false">
          <view class="t-button__content button--t-button__content">使用 default 布局</view>
        </button>
        <button
          activity-type="0"
          entrance-path=""
          need-show-entrance=""
          app-parameter=""
          data-custom="null"
          form-type=""
          hover-class="t-button--hover"
          hover-start-time="20"
          hover-stay-time="70"
          lang=""
          open-type=""
          send-message-img="截图"
          send-message-path="当前分享路径"
          send-message-title="当前标题"
          session-from=""
          style=""
          class="mt-3 t-button button--t-button t-button--outline button--t-button--outline t-button--success button--t-button--success t-button--rectangle button--t-button--rectangle t-button--size-medium button--t-button--size-medium t-button--block button--t-button--block"
          role="button"
          aria-disabled="false">
          <view class="t-button__content button--t-button__content">切到 admin 布局</view>
        </button>
        <button
          activity-type="0"
          entrance-path=""
          need-show-entrance=""
          app-parameter=""
          data-custom="null"
          form-type=""
          hover-class="t-button--hover"
          hover-start-time="20"
          hover-stay-time="70"
          lang=""
          open-type=""
          send-message-img="截图"
          send-message-path="当前分享路径"
          send-message-title="当前标题"
          session-from=""
          style=""
          class="mt-3 t-button button--t-button t-button--outline button--t-button--outline t-button--warning button--t-button--warning t-button--rectangle button--t-button--rectangle t-button--size-medium button--t-button--size-medium t-button--block button--t-button--block"
          role="button"
          aria-disabled="false">
          <view class="t-button__content button--t-button__content">关闭布局</view>
        </button>
        <button
          activity-type="0"
          entrance-path=""
          need-show-entrance=""
          app-parameter=""
          data-custom="null"
          form-type=""
          hover-class="t-button--hover"
          hover-start-time="20"
          hover-stay-time="70"
          lang=""
          open-type=""
          send-message-img="截图"
          send-message-path="当前分享路径"
          send-message-title="当前标题"
          session-from=""
          style=""
          class="mt-3 t-button button--t-button t-button--outline button--t-button--outline t-button--default button--t-button--default t-button--rectangle button--t-button--rectangle t-button--size-medium button--t-button--size-medium t-button--block button--t-button--block"
          role="button"
          aria-disabled="false">
          <view class="t-button__content button--t-button__content">返回首页</view>
        </button>
      </view>
    </view>
  </view>
</weapp-layout-default>
"
`;
